crates/nash-parse/src/snapshots/nash_parse__type___tests__representation_annotation_rejects_arrow.snap
---
source: crates/nash-parse/src/type_.rs
description: "Code:\n\n('f : Big -> Big)"
---
Tuple(
    Repr(
        Arrow(
            1,
            11,
        ),
        1,
        7,
    ),
    1,
    1,
)
