crates/nash-parse/src/snapshots/nash_parse__type___tests__scheme_error_little_class.snap
---
source: crates/nash-parse/src/type_.rs
description: "Code:\n\nint 'a => 'a"
---
Context(
    1,
    1,
)
