crates/nash-parse/src/snapshots/nash_parse__type___tests__scheme_error_tuple_member.snap
---
source: crates/nash-parse/src/type_.rs
description: "Code:\n\n(Eq 'a, 'b) => 'a"
---
Context(
    1,
    1,
)
