crates/nash-parse/src/snapshots/nash_parse__type___tests__scheme_error_variable_context.snap
---
source: crates/nash-parse/src/type_.rs
description: "Code:\n\n'a => 'a"
info: diagnostic
---
nash::syntax

  × Invalid type constraint.
   ╭─[src/Main.nash:1:1]
 1 │ 'a => 'a
   · ─
   ╰────
  help: Write `Trait args => type`; enclose multiple constraints in parentheses,
        separated by commas.
