crates/nash-parse/src/snapshots/nash_parse__type___tests__scheme_multi_argument_constraint.snap
---
source: crates/nash-parse/src/type_.rs
description: "Code:\n\nLift 'small 'big => 'small -> 'big"
---
Annotation {
    constraints: [
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 17,
                },
            },
            value: Constraint {
                class: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 1,
                        },
                        end: Position {
                            line: 1,
                            column: 5,
                        },
                    },
                    value: "Lift",
                },
                module: None,
                args: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 6,
                            },
                            end: Position {
                                line: 1,
                                column: 12,
                            },
                        },
                        value: Var(
                            "small",
                        ),
                    },
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 13,
                            },
                            end: Position {
                                line: 1,
                                column: 17,
                            },
                        },
                        value: Var(
                            "big",
                        ),
                    },
                ],
            },
        },
    ],
    typ: Located {
        region: Region {
            start: Position {
                line: 1,
                column: 21,
            },
            end: Position {
                line: 1,
                column: 35,
            },
        },
        value: Lambda {
            from: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 21,
                    },
                    end: Position {
                        line: 1,
                        column: 27,
                    },
                },
                value: Var(
                    "small",
                ),
            },
            to: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 31,
                    },
                    end: Position {
                        line: 1,
                        column: 35,
                    },
                },
                value: Var(
                    "big",
                ),
            },
        },
    },
}
