crates/nash-parse/src/snapshots/nash_parse__type___tests__scheme_single_constraint.snap
---
source: crates/nash-parse/src/type_.rs
description: "Code:\n\nEq 'a => 'a -> 'a -> bool"
---
Annotation {
    constraints: [
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 6,
                },
            },
            value: Constraint {
                class: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 1,
                        },
                        end: Position {
                            line: 1,
                            column: 3,
                        },
                    },
                    value: "Eq",
                },
                module: None,
                args: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 4,
                            },
                            end: Position {
                                line: 1,
                                column: 6,
                            },
                        },
                        value: Var(
                            "a",
                        ),
                    },
                ],
            },
        },
    ],
    typ: Located {
        region: Region {
            start: Position {
                line: 1,
                column: 10,
            },
            end: Position {
                line: 1,
                column: 26,
            },
        },
        value: Lambda {
            from: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 10,
                    },
                    end: Position {
                        line: 1,
                        column: 12,
                    },
                },
                value: Var(
                    "a",
                ),
            },
            to: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 16,
                    },
                    end: Position {
                        line: 1,
                        column: 26,
                    },
                },
                value: Lambda {
                    from: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 16,
                            },
                            end: Position {
                                line: 1,
                                column: 18,
                            },
                        },
                        value: Var(
                            "a",
                        ),
                    },
                    to: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 22,
                            },
                            end: Position {
                                line: 1,
                                column: 26,
                            },
                        },
                        value: Type {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 22,
                                },
                                end: Position {
                                    line: 1,
                                    column: 26,
                                },
                            },
                            name: "bool",
                            args: [],
                        },
                    },
                },
            },
        },
    },
}
