crates/nash-parse/src/snapshots/nash_parse__type___tests__scheme_tuple_constraints.snap
---
source: crates/nash-parse/src/type_.rs
description: "Code:\n\n(Eq 'a, Show 'b) => 'a -> 'b -> string"
---
Annotation {
    constraints: [
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 2,
                },
                end: Position {
                    line: 1,
                    column: 7,
                },
            },
            value: Constraint {
                class: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 2,
                        },
                        end: Position {
                            line: 1,
                            column: 4,
                        },
                    },
                    value: "Eq",
                },
                module: None,
                args: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 5,
                            },
                            end: Position {
                                line: 1,
                                column: 7,
                            },
                        },
                        value: Var(
                            "a",
                        ),
                    },
                ],
            },
        },
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 9,
                },
                end: Position {
                    line: 1,
                    column: 16,
                },
            },
            value: Constraint {
                class: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 9,
                        },
                        end: Position {
                            line: 1,
                            column: 13,
                        },
                    },
                    value: "Show",
                },
                module: None,
                args: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 14,
                            },
                            end: Position {
                                line: 1,
                                column: 16,
                            },
                        },
                        value: Var(
                            "b",
                        ),
                    },
                ],
            },
        },
    ],
    typ: Located {
        region: Region {
            start: Position {
                line: 1,
                column: 21,
            },
            end: Position {
                line: 1,
                column: 39,
            },
        },
        value: Lambda {
            from: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 21,
                    },
                    end: Position {
                        line: 1,
                        column: 23,
                    },
                },
                value: Var(
                    "a",
                ),
            },
            to: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 27,
                    },
                    end: Position {
                        line: 1,
                        column: 39,
                    },
                },
                value: Lambda {
                    from: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 27,
                            },
                            end: Position {
                                line: 1,
                                column: 29,
                            },
                        },
                        value: Var(
                            "b",
                        ),
                    },
                    to: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 33,
                            },
                            end: Position {
                                line: 1,
                                column: 39,
                            },
                        },
                        value: Type {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 33,
                                },
                                end: Position {
                                    line: 1,
                                    column: 39,
                                },
                            },
                            name: "string",
                            args: [],
                        },
                    },
                },
            },
        },
    },
}
