crates/nash-parse/src/snapshots/nash_parse__type___tests__scheme_without_constraints.snap
---
source: crates/nash-parse/src/type_.rs
description: "Code:\n\n'a -> 'a"
---
Annotation {
    constraints: [],
    typ: Located {
        region: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 9,
            },
        },
        value: Lambda {
            from: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 1,
                    },
                    end: Position {
                        line: 1,
                        column: 3,
                    },
                },
                value: Var(
                    "a",
                ),
            },
            to: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 7,
                    },
                    end: Position {
                        line: 1,
                        column: 9,
                    },
                },
                value: Var(
                    "a",
                ),
            },
        },
    },
}
